--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+##?????
+spring.datasource.url=jdbc:postgresql://localhost:5432/test?serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.schema-locations=classpath:movies.sql
+spring.sql.init.mode=always
+
 
